# files-to-prompt

./: .gitignore  README.md  dump.txt  pyproject.toml
files_to_prompt/: cli.py  repomap.py
files_to_prompt/queries/: README.md  tree-sitter-javascript-tags.scm  tree-sitter-python-tags.scm
